Archive2/a6/a404fb9a6b7ad6/output
main.cpp:11:20: error: constexpr variable 'y' must be initialized by a constant expression
    constexpr auto y = sqrt(-1);
                   ^   ~~~~~~~~
main.cpp:3:19: note: subexpression not valid in a constant expression
    if(param < 0) throw "moo!";
                  ^
main.cpp:11:24: note: in call to 'sqrt(-1)'
    constexpr auto y = sqrt(-1);
                       ^
1 error generated.
